LOADUI-990 Added int-tests profile to integration-tests module